--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>jquery+css实现抽奖机</title>
+	<title>jquery++css实现抽奖机</title>
 	<style type="text/css">
 		div {
 			background-color: #333333;
